--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # Токен Telegram бота (получить у @BotFather)
-BOT_TOKEN=your_telegram_bot_token_here
+BOT_TOKEN=8489331202:AAEenH-FNTxmothImM-KC0oMf9ZAxy4ybuU
 
 # URL сайта (для локальной разработки)
-SITE_URL=http://localhost:8000
+SITE_URL=https://era-front-san-back.vercel.app
 
 # Для ngrok используй:
 # SITE_URL=https://your-ngrok-url.ngrok-free.app
