Prepare for production deployment

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
-# Токен Telegram бота (получить у @BotFather)
-BOT_TOKEN=8489331202:AAEenH-FNTxmothImM-KC0oMf9ZAxy4ybuU
+# Era Entertainment — Environment Variables
+# Copy this file to .env and fill in your values
 
-# URL сайта (для локальной разработки)
-SITE_URL=https://era-front-san-back.vercel.app
+# Telegram Bot Token (get from @BotFather)
+BOT_TOKEN=your_bot_token_here
 
-# Для ngrok используй:
-# SITE_URL=https://your-ngrok-url.ngrok-free.app
+# Site URL (your hosting URL, e.g. https://your-app.railway.app)
+SITE_URL=https://your-app.railway.app
